--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="theme-color" content="#232425">
+    <meta name="msapplication-navbutton-color" content="#232425">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#232425">
+    <meta property="og:url" content="https://jlozovei.github.io/flavored-markdown">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Flavored Markdown">
+    <meta property="og:site_name" content="Flavored Markdown">
+    <meta property="og:description" content="Your in-browser markdown editor">
+    <meta property="og:image" content="https://jlozovei.github.io/flavored-markdown/flavored-markdown.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Flavored Markdown">
+    <meta name="twitter:creator" content="@jlozovei">
+    <meta name="twitter:description" content="Your in-browser markdown editor">
+    <meta name="twitter:image" content="https://jlozovei.github.io/flavored-markdown/flavored-markdown.jpg">
+    <meta name="description" content="Your in-browser markdown editor">
     <title>Flavored Markdown</title>
+    <link rel="icon" type="image/png" href="https://jlozovei.github.io/flavored-markdown/favicon.png" sizes="96x96">
   </head>
   <body>
     <noscript>
