update old URL references
- replace old URL references with new one

--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,20 @@
     <meta name="theme-color" content="#232425">
     <meta name="msapplication-navbutton-color" content="#232425">
     <meta name="apple-mobile-web-app-status-bar-style" content="#232425">
-    <meta property="og:url" content="https://jlozovei.github.io/flavored-markdown">
+    <meta property="og:url" content="https://flavored-markdown.app">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Flavored Markdown">
     <meta property="og:site_name" content="Flavored Markdown">
     <meta property="og:description" content="Your in-browser markdown editor">
-    <meta property="og:image" content="https://jlozovei.github.io/flavored-markdown/flavored-markdown.jpg">
+    <meta property="og:image" content="https://flavored-markdown.app/flavored-markdown.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Flavored Markdown">
     <meta name="twitter:creator" content="@jlozovei">
     <meta name="twitter:description" content="Your in-browser markdown editor">
-    <meta name="twitter:image" content="https://jlozovei.github.io/flavored-markdown/flavored-markdown.jpg">
+    <meta name="twitter:image" content="https://flavored-markdown.app/flavored-markdown.jpg">
     <meta name="description" content="Your in-browser markdown editor">
     <title>Flavored Markdown</title>
-    <link rel="icon" type="image/png" href="https://jlozovei.github.io/flavored-markdown/favicon.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="https://flavored-markdown.app/favicon.png" sizes="96x96">
   </head>
   <body>
     <noscript>
